# ai-assistant

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assistant_app/: manage.py
assistant_app/assistant_app/: asgi.py  settings.py  urls.py  wsgi.py
assistant_app/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
assistant_app/core/migrations/: 0001_initial.py  0002_clientfeedback.py  0003_events_serivces.py
assistant_app/core/templates/: event-notification.html
assistant_app/templates/: ai-assistant.html  landing-page.html
