[tool.poetry]
name = "ai-assistant"
version = "0.1.0"
description = "AI-Solution - Innovating the Future of Work"
authors = ["Nisu <caseynishu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
