[tool.poetry]
name = "ai-assistant"
version = "0.1.0"
description = "AI-Solution - Innovating the Future of Work"
authors = ["Nisu <caseynishu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
